kubernetes/argocd/values/prowlarr/prowlarr-deployment.yaml
# Password : prowlarr123*prowlarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  replicas: 1
  template:
    metadata:
      labels:
        app: prowlarr
        deployed_by: argocd
    spec:
      hostNetwork: true
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
          resources:
            requests:
              memory: "512Mi"
          volumeMounts:
          - mountPath: /config
            name: prowlarr-config
      volumes:
      - persistentVolumeClaim:
          claimName: prowlarr-config
        name: prowlarr-config
