kubernetes/argocd/values/prowlarr/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: scaleway
  labels:
    app: prowlarr
  name: prowlarr
  namespace: prowlarr
spec:
  ingressClassName: nginx
  rules:
    - host: prowlarr.local.soulkyu.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
  tls:
    - hosts:
      - prowlarr.local.soulkyu.net
      secretName: prowlarr.local.soulkyu.net-tls
